# devtrack-sdk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  FINAL_TEST_SUMMARY.md  GITHUB_RELEASE_0.4.0.md  MERGE_REQUEST_0.4.0.md  README.md  RELEASE_REVIEW_0.4.0.md  manual_test_verification.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: devtrack-custome-rules.mdc
.github/: FUNDING.yml
.github/workflows/: ci.yml
TODO/: developer_experience.md  docs_and_examples.md  integrations.md  sdk_features.md  ui_enhancements.md
devtrack_sdk/: __version__.py  cli.py  database.py  django_middleware.py  django_urls.py  django_views.py  middleware.py
devtrack_sdk/controller/: devtrack_routes.py
devtrack_sdk/dashboard/: README.md  build.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
devtrack_sdk/middleware/: base.py  extractor.py
docs/: README.md  conf.py  django_integration.md  fastapi_integration.md  index.md  requirements.txt
docs/getting-started/: installation.md
docs/release/: RELEASE_NOTES DevTrack SDK v0.3.0.md  RELEASE_NOTES DevTrack SDK v0.4.0.md  RELEASE_NOTES DevTrack SDK v0.4.1.md  RELEASE_NOTES DevTrack SDK v0.4.2.md  ROADMAP.md
docs/sdk-docs/: RELEASE_CHECKLIST.md
docs/test-reports/: TEST_REPORT_0.4.0.md  TEST_REPORT_0.4.2.md
examples/: README.md  django_example.py  fastapi_example.py
examples/devtrack_example/: manage.py
tests/: __init__.py  conftest.py  test_cli.py  test_django_integration.py  test_metrics_endpoints.py  test_middleware.py
(+16 files in other folders)
